FIX: No spacing above footer [640]

--- a/common/common.scss
+++ b/common/common.scss
@@ -7,6 +7,7 @@
     overflow: hidden;
     font-family: 'Roboto',sans-serif;
     font-size: 17px;
+    margin-top: 25px;
 }
 #footer::after {
     content: '';
